--- a/starter-code/views/celebrity/index.hbs
+++ b/starter-code/views/celebrity/index.hbs
@@ -12,6 +12,9 @@
                     ficha</button></a>
             <a href="/celebrity/{{this.id}}/delete"><button class="btn align-text-bottom btn-outline-danger">Eliminar
                     celebrity</button></a>
+            <a href="/celebrity/{{this.id}}/edit"><button class="btn align-text-bottom btn-outline-danger">Editar
+                    celebrity</button></a>
+
 
 
         </div>
